refactor: Code quality improvement in Wishlist module